Black menu bar on mobile fix

--- a/non-server/less/admin.less
+++ b/non-server/less/admin.less
@@ -968,7 +968,7 @@ input.invalid {
 		#main {
 			margin-left: 0;
 			margin-bottom: 0;
-			margin-top: 32px;
+			margin-top: 31px;
 			padding: 10px;
 		}
 	}
